updated via jest

--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
   "bugs": {
     "url": "https://github.com/kstaver/Team-Profile-Generator/issues"
   },
-  "homepage": "https://github.com/kstaver/Team-Profile-Generator#readme"
+  "homepage": "https://github.com/kstaver/Team-Profile-Generator#readme",
+  "devDependencies": {
+    "jest": "^27.2.5"
+  }
 }
