--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jest": "^27.2.5"
   },
   "dependencies": {
-    "inquirer": "^8.2.0"
+    "inquirer": "^8.2.0",
+    "mysql2": "^2.3.0"
   }
 }
